Signed-off-by: Buddhika <buddhika.ari@gmail.com>

--- a/src/main/webapp/clinical/clinical_new_opd_visit.xhtml
+++ b/src/main/webapp/clinical/clinical_new_opd_visit.xhtml
@@ -399,7 +399,7 @@
 
                                     <p:panel header="Billings" >
                                         <p:dataTable id="tblPtBills"
-                                                     value="#{patientEncounterController.currentBills}" 
+                                                     value="#{patientEncounterController.currentPatientBills}" 
                                                      var="bill" rows="5"
                                                      paginator="true"
                                                      paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
