--- a/src/main/webapp/resources/hr/pay_slip.xhtml
+++ b/src/main/webapp/resources/hr/pay_slip.xhtml
@@ -18,8 +18,8 @@
         <h:outputStylesheet library="css" name="paySheet.css" ></h:outputStylesheet>
         <div style="position: relative!important;
              /*padding-left: 0.5%!important;*/
-             height:50%!important;
-             width:100%!important; 
+             height:14cm!important;
+             width:24cm!important; 
              /*             overflow:hidden!important; */
              font-family: Times New Roman!important; 
              font-size: 10px!important; 
