--- a/src/main/webapp/hr/hr_reports.xhtml
+++ b/src/main/webapp/hr/hr_reports.xhtml
@@ -59,6 +59,10 @@
                                                          value="(9) EPF ETF" 
                                                          styleClass="linkButton"
                                                          actionListener="#{staffBasicController.makeItemNul()}"  />
+                                        <p:commandButton ajax="false" action="/hr/hr_report_staff_salary_generate _or_not"
+                                                         value="(11) Staff Salary Generate Or Not Report" 
+                                                         styleClass="linkButton"
+                                                         actionListener="#{hrReportController.makeNull()}"  />
                                     </h:panelGrid>
                                 </p:panel>
                                 <p:panel header="(4) Shift" style="width: 400px;margin: auto;" collapsed="true" toggleable="true">
