--- a/src/main/webapp/admin_user_department.xhtml
+++ b/src/main/webapp/admin_user_department.xhtml
@@ -52,7 +52,7 @@
                             <p:selectOneMenu  value="#{userDepartmentController.currentInstituion}" id="ins2"  >
                                 <f:selectItem itemLabel="Please select an institutie"/>
                                 <f:selectItems value="#{institutionController.items}" var="i" itemLabel="#{i.name}" itemValue="#{i}" />
-                                <f:ajax render="dept2" execute="ins2" event="change"/>
+                                <p:ajax update="dept2" process="ins2" event="change"/>
                             </p:selectOneMenu>
                         </p:panel>
 
