Channel Changes Signed-off-by: HNDIT <s.t.dushan@gmail.com>

--- a/src/main/webapp/channel/channel_fee_change.xhtml
+++ b/src/main/webapp/channel/channel_fee_change.xhtml
@@ -97,7 +97,7 @@
                             <h:outputLabel value="Not Done" rendered="#{!i.done}"/>
                         </p:column>
                         <p:column headerText="Remove">
-                            <p:commandButton value="Remove" action="#{sheduleController.removeAddFee(i)}" ajax="false" />
+                            <p:commandButton value="Remove" action="#{sheduleController.removeAddFee(i)}" disabled="#{i.done}" ajax="false" />
                         </p:column>
                     </p:dataTable>
 
