create new Rmh Opd bill Signed-off-by: dilshankanishka <dkphettiarachchi@gmail.com>

--- a/src/main/webapp/resources/bill/opdBillPrintRmh.xhtml
+++ b/src/main/webapp/resources/bill/opdBillPrintRmh.xhtml
@@ -33,7 +33,7 @@
                                        position: absolute!important;
                                        left: 7.0%!important;
                                        top: 2.0%!important;"
-                                       value=" THIS BILL IS NOT VALID PLEASE CANCEL"/>
+                                       value=" THIS BILL IS NOT VALID PLEASE CANCEL."/>
                     </div>
 
                     <div style="font-size: 16px!important;">
