--- a/src/main/webapp/channel/channel_shedule.xhtml
+++ b/src/main/webapp/channel/channel_shedule.xhtml
@@ -76,15 +76,8 @@
                     <p:panelGrid columns="2">  
 
                         <p:outputLabel value="Session Name"/>
-                        <p:inputText autocomplete="off" value="#{sheduleController.current.name}(#{sheduleController.current})"/>
+                        <p:inputText autocomplete="off" value="#{sheduleController.current.name}"/>
                         
-                        <p:outputLabel value="Selected Speciality"/>
-                        <p:inputText autocomplete="off" value="#{sheduleController.speciality}"/>
-                        
-                        <p:outputLabel value="Selected Staff"/>
-                        <p:inputText autocomplete="off" value="#{sheduleController.currentStaff}"/>
-
-
                         <h:outputText value="Institution" ></h:outputText>
                         <p:selectOneMenu id="cmbIns" value="#{sheduleController.current.institution}" >
                             <f:selectItem itemLabel="Please select a Institution"/>
@@ -191,11 +184,7 @@
                     </h:panelGrid>
                     <p:dataTable value="#{sheduleController.itemFees}" var="i" >
                         <p:column headerText="Name">
-<!--                            <h:inputText value="#{i.name}"/>                            -->
                             <h:outputLabel value="#{i.name}"/> 
-                        </p:column>
-                        <p:column headerText="ID">
-                            #{i}
                         </p:column>
                         <p:column headerText="Fee Type">
                             #{i.feeType}
@@ -220,7 +209,7 @@
                 </p:panel>
 
             </h:panelGrid>
-            <p:commandButton value="Update On-Call Fees" action="#{sheduleController.createOnCallFeeOldSession()}" ajax="false" />
+            <p:commandButton value="Update On-Call Fees" action="#{sheduleController.createOnCallFeeOldSession()}" rendered="false" ajax="false" />
         </h:form>
     </ui:define>
 
