Channel Shedule Changes Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/channel/channel_fee_change.xhtml
+++ b/src/main/webapp/channel/channel_fee_change.xhtml
@@ -55,7 +55,7 @@
                     </h:panelGrid>
 
                     <h:panelGrid id="gpSelectButtons" columns="3"  >                     
-                        <p:commandButton ajax="false" id="btnAdd" value="Clear" action="#{sheduleController.prepareAdd()}" styleClass="buttons" onclick="onSubmitButton();" >
+                        <p:commandButton ajax="false" id="btnAdd" value="Clear" action="#{sheduleController.prepareAddFeeChange}" styleClass="buttons" onclick="onSubmitButton();" >
                             <f:ajax render="btnAdd  pg1 btnSave" execute="" >
                             </f:ajax>
                         </p:commandButton>
