--- a/src/main/webapp/channel/management_index.xhtml
+++ b/src/main/webapp/channel/management_index.xhtml
@@ -44,7 +44,7 @@
                     </p:panel>
                     <p:panel header="Shedule" >
                         <p:panelGrid columns="1" >
-                            <p:commandButton  styleClass="linkButton" ajax="false" value="Channel Fee Update" action="/channel/channel_fee_change" actionListener="#{sheduleController.prepareAdd()}" />
+                            <p:commandButton  styleClass="linkButton" ajax="false" value="Channel Fee Update" action="/channel/channel_fee_change" actionListener="#{sheduleController.prepareAddFeeChange}" />
                         </p:panelGrid>
                     </p:panel>
                 </p:panelGrid>
