--- a/src/main/webapp/opd_service_list_to_remove.xhtml
+++ b/src/main/webapp/opd_service_list_to_remove.xhtml
@@ -21,7 +21,7 @@
                             <p:printer target="panIx" />
                         </p:commandButton>
                         <p:commandButton ajax="false" value="Excel" styleClass="noPrintButton" >
-                            <p:dataExporter target="panIx" type="xls" fileName="All Services" />
+                            <p:dataExporter target="dtF" type="xls" fileName="All Services" />
                         </p:commandButton>
                     </f:facet>
 
